# SpiffCoinCore

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libspiffcoinconsensus.pc.in
build_msvc/: .gitignore  README.md  bitcoin.sln  bitcoin_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-qt.pro  bitcoin-tx.bash-completion  bitcoind.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  spiffcoin-cli.1  spiffcoin-qt.1  spiffcoin-tx.1  spiffcoin-util.1  spiffcoin-wallet.1  spiffcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrman.h  amount.h  chain.h  chainparams.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  (+32 more)
(+468 files in other folders)
